<resources>
    <string name="app_name">Diabetku</string>
    <string name="title_home">Home</string>
    <string name="title_notification">Notifikasi</string>
    <string name="title_profile">Profil</string>
    <string name="selamat_pagi">Selamat Pagi!</string>
    <string name="ann_chovey">Ann Chovey</string>
    <string name="menu_utama">Menu Utama</string>
    <string name="pemantauan_gula_darah">Pemantauan Gula Darah</string>
    <string name="login">Login</string>
    <string name="masukkan_email_dan_kata_sandi_anda">Masukkan email dan kata sandi Anda</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="lupa_kata_sandi_anda">Lupa kata sandi Anda?</string>
    <string name="atau">Atau</string>
    <string name="google_image">Google Image</string>
    <string name="lanjutkan_dengan_google">Lanjutkan dengan Google</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="daftar">Daftar</string>
    <string name="register">Register</string>
    <string name="buat_akun_baru">Buat akun untuk melanjutkan</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tanggal_lahir">Tanggal Lahir\n</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="dummy_date_with_time">Sabtu, 24 November 2024 – 12:04</string>
    <string name="dummy_label_jenis">Sebelum Makan</string>
    <string name="dummy_glucose">80 mg/dL</string>
    <string name="dummy_date">Sabtu, 24 November 2024</string>
    <string name="pengukuran_terakhir">Pengukuran Terakhir</string>
    <string name="harian">Harian</string>
    <string name="tahunan">Tahunan</string>
    <string name="bulanan">Bulanan</string>
    <string name="filter">Filter</string>
    <string name="kadar_gula_darah">Kadar Gula Darah</string>
    <string name="fab_content_desc">fab_content_desc</string>
    <string name="ubah_foto_profil">Ubah Foto Profil</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="simpan">Simpan</string>
    <string name="pilih_jenis_kelamin">Pilih jenis kelamin</string>
    <string name="button_ubah">Button Ubah</string>
    <string name="ubah">Ubah</string>
    <string name="usia">Usia</string>
    <string name="tinggi">Tinggi</string>
    <string name="tidak_ada_data">-</string>
    <string name="berat">Berat</string>
    <string name="item_tersimpan">Item Tersimpan</string>
    <string name="tema">Tema</string>
    <string name="atur_pengingat">Atur Pengingat</string>
    <string name="keluar">Keluar</string>
    <string name="textview">TextView</string>
    <string name="mau_makan_apa_hari_ini">Mau makan apa hari ini?</string>
    <string name="event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="lihat_selengkapnya">Lihat Selengkapnya</string>
    <string name="artikel">Artikel</string>
    <string name="video_edukasi">Video Edukasi</string>
    <string name="rencana_makan">Rencana Makan</string>
    <string name="icon_glucose">Icon Glucose</string>
    <string name="cek_diabetes">Cek Diabetes</string>
    <string name="diabetesi">Diabetesi</string>
    <string name="status">Status :</string>
    <string name="name">Name</string>
    <string name="faktor_risiko_genetik_dpf">Faktor Risiko Genetik (DPF)</string>
    <string name="tingkat_insulin">Tingkat Insulin</string>
    <string name="jumlah_kehamilan">Jumlah Kehamilan</string>
    <string name="jenis_pemeriksaan">Jenis Pemeriksaan</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu">Waktu</string>
    <string name="loading">loading..</string>
    <string name="mingguan">Mingguan</string>
    <string name="bangun_tidur">Bangun Tidur</string>
    <string name="sebelum_tidur">Sebelum Tidur</string>
    <string name="sebelum_makan">Sebelum Makan</string>
    <string name="setelah_makan">Setelah Makan</string>
    <string name="lainnya">Lainnya</string>
    <string name="puasa">Puasa</string>
    <string name="riwayat">Riwayat</string>
    <string name="tekanan_darah">Tekanan Darah</string>
    <string name="ketebalan_lipatan_kulit">Ketebalan Lipatan Kulit</string>
    <string name="cek_sekarang">Cek Sekarang</string>
    <string name="indeks_massa_tubuh_bmi">Indeks Massa Tubuh (BMI)</string>
    <string name="diabetku">Diabetku</string>
    <string name="tahun">Tahun</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="hapus">Hapus</string>
    <string name="cek_rekomendasi">Cek Rekomendasi</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="kalori_kcal">Kalori (kcal)</string>
    <string name="jumlah_karbohidrat">Jumlah Karbohidrat</string>
    <string name="estimasi_glukosa_mg_dl">Estimasi Glukosa (mg/dL)</string>
    <string name="tambahkan_pengingat">Tambahkan Pengingat</string>
    <string name="tipe_notifikasi">Tipe Notifikasi</string>
    <string name="judul_reminder">Judul Reminder</string>
    <string name="pilih_waktu">Pilih Waktu</string>
    <string name="judul_notifikasi">Judul Notifikasi</string>
    <string name="jam_notifikasi">Jam Notifikasi</string>
    <string name="rekomendasi_makanan">Rekomendasi Makanan</string>
    <string name="menu_artikel">Menu Artikel</string>
    <string name="menu_video">Menu video</string>
    <string name="menu_rekomendasi_makanan">Menu Rekomendasi makanan</string>
    <string name="hasil_diagnosis">Hasil Diagnosis</string>
    <string name="ok">Ok</string>
</resources>