<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfileFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:foregroundGravity="top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profileInformation"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:background="@color/blue_200"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="18dp"
                android:src="@drawable/avatar_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/nama_lengkap"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/profile_image"
                app:layout_constraintTop_toTopOf="@+id/profile_image"
                app:layout_constraintBottom_toTopOf="@id/tvEmail"/>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginStart="12dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/profile_image"
                app:layout_constraintStart_toEndOf="@+id/profile_image"
                app:layout_constraintTop_toBottomOf="@id/tvUserName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabUbahProfile"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/button_ubah"
            android:layout_gravity="bottom|end"
            android:text="@string/ubah"
            app:icon="@drawable/ic_edit"
            app:iconSize="18dp"
            app:iconTint="@color/white"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/blue_500"
            app:layout_constraintBottom_toBottomOf="@id/profileInformation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileInformation" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inputInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/profileInformation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tvTitleUsia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usia"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvTitleTinggi"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvUsia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/tvTitleUsia"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvTinggi"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/tidak_ada_data"/>

            <TextView
                android:id="@+id/tvTitleTinggi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tinggi"
                android:textSize="16sp"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvTinggi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/tvTitleTinggi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/tidak_ada_data"/>

            <TextView
                android:id="@+id/tvTitleBerat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/berat"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvTitleTinggi"/>

            <TextView
                android:id="@+id/tvBerat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/tvTitleBerat"
                app:layout_constraintStart_toEndOf="@id/tvTinggi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/tidak_ada_data"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/itemMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/inputInformation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/gray_200" />

            <TextView
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:id="@+id/buttonLogout"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/keluar"
                android:textColor="@color/red_500"
                android:textSize="18sp"
                android:paddingStart="16dp"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="8dp"
                app:drawableStartCompat="@drawable/icon_logout"
                app:drawableTint="@color/red_500" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>